--- a/index.html
+++ b/index.html
@@ -1,44 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EncryptX</title>
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="app">
-    <aside id="sidebar" class="sidebar">
+    <aside class="sidebar">
       <div class="sidebar-header">
-        <a href="/" class="logo-link" aria-label="Go to home">
-          <!-- New EX logo SVG -->
-          <svg viewBox="0 0 48.00 48.00" id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="2.4" class="logo-svg">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M40.5,5.5H7.5a2,2,0,0,0-2,2v33a2,2,0,0,0,2,2h33a2,2,0,0,0,2-2V7.5A2,2,0,0,0,40.5,5.5Z"></path>
-            <line stroke-linecap="round" stroke-linejoin="round" x1="17.25" y1="37.5" x2="30.75" y2="37.5"></line>
-            <line stroke-linecap="round" stroke-linejoin="round" x1="17.25" y1="10.5" x2="30.75" y2="10.5"></line>
-            <line stroke-linecap="round" stroke-linejoin="round" x1="17.25" y1="24" x2="26.05" y2="24"></line>
-            <line stroke-linecap="round" stroke-linejoin="round" x1="17.25" y1="10.5" x2="17.25" y2="37.5"></line>
+        <a href="https://encryptx-security.github.io" class="logo-link">
+          <svg class="logo-svg" viewBox="0 0 300 300" preserveAspectRatio="xMidYMid meet">
+            <g transform="translate(0,300) scale(0.1,-0.1)" fill="currentColor" stroke="none">
+              <path d="M782 1912 c2 -4 48 -51 104 -105 l101 -97 149 0 149 0 175 -174 c96 -95 242 -237 324 -315 l150 -141 143 0 c79 0 143 4 143 9 0 7 -693 682 -811 789 l-46 42 -292 0 c-161 0 -291 -3 -289 -8z"/>
+              <path d="M1803 1802 c-68 -64 -123 -124 -123 -132 0 -9 32 -47 70 -85 l70 -69 68 65 c37 36 127 123 199 194 73 70 130 132 127 136 -3 5 -69 9 -147 9 l-142 0 -122 -118z"/>
+              <path d="M889 1613 l-117 -4 -7 -152 c-3 -84 -5 -201 -3 -262 l3 -110 309 -3 309 -2 126 125 126 126 -79 75 -79 76 -96 -96 -96 -96 -138 0 -137 0 0 45 0 45 114 0 114 0 48 55 c27 30 49 59 49 64 0 5 -23 34 -52 65 l-52 56 -113 -2 c-62 -1 -165 -4 -229 -5z"/>
+            </g>
           </svg>
         </a>
-        <button id="toggleSidebar" class="toggle-btn" aria-label="Toggle sidebar">
+        <button class="sidebar-toggle">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
           </svg>
         </button>
       </div>
       <nav class="sidebar-menu">
-        <a href="data_encryptor.html" class="menu-item">Data Encryptor</a>
-        <a href="data_decryptor.html" class="menu-item">Data Decryptor</a>
+        <a href="data_encryptor.html" class="menu-item">
+          <svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z" />
+          </svg>
+          Data Encryptor
+        </a>
+        <a href="data_decryptor.html" class="menu-item">
+          <svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5V6.75a4.5 4.5 0 1 1 9 0v3.75M3.75 21.75h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H3.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z" />
+          </svg>
+          Data Decryptor
+        </a>
       </nav>
       <div class="sidebar-footer">Site Made By Laksh &lt;3</div>
     </aside>
 
     <main class="main">
-      <div class="header-bar">
-        <button id="themeToggleBtn" class="theme-toggle-btn" aria-label="Toggle theme"></button>
+      <div class="header">
+        <div class="mobile-sidebar-toggle-container">
+          <button class="mobile-sidebar-toggle">
+            <svg class="mobile-toggle-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+            </svg>
+          </button>
+        </div>
+        <h1 class="title">EncryptX Data Obfuscator</h1>
+        <button class="theme-toggle">
+          <svg class="theme-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+            <!-- Icon will be inserted by JavaScript -->
+          </svg>
+        </button>
       </div>
+
       <div class="content">
-        <h1>Welcome</h1>
+        <h2>Welcome</h2>
       </div>
     </main>
   </div>
