--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="sidebar-header">
         <a href="https://encryptx-security.github.io" class="logo-link">
           <svg class="logo-svg" viewBox="0 0 300 300" preserveAspectRatio="xMidYMid meet">
-            <g transform="translate(0,300) scale(0.1,-0.1)" fill="currentColor" stroke="none">
+            <g transform="translate(0,300) scale(0.1,-0.1)" stroke="none">
               <path d="M782 1912 c2 -4 48 -51 104 -105 l101 -97 149 0 149 0 175 -174 c96 -95 242 -237 324 -315 l150 -141 143 0 c79 0 143 4 143 9 0 7 -693 682 -811 789 l-46 42 -292 0 c-161 0 -291 -3 -289 -8z"/>
               <path d="M1803 1802 c-68 -64 -123 -124 -123 -132 0 -9 32 -47 70 -85 l70 -69 68 65 c37 36 127 123 199 194 73 70 130 132 127 136 -3 5 -69 9 -147 9 l-142 0 -122 -118z"/>
               <path d="M889 1613 l-117 -4 -7 -152 c-3 -84 -5 -201 -3 -262 l3 -110 309 -3 309 -2 126 125 126 126 -79 75 -79 76 -96 -96 -96 -96 -138 0 -137 0 0 45 0 45 114 0 114 0 48 55 c27 30 49 59 49 64 0 5 -23 34 -52 65 l-52 56 -113 -2 c-62 -1 -165 -4 -229 -5z"/>
@@ -20,40 +20,66 @@
           </svg>
         </a>
         <button class="sidebar-toggle">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
           </svg>
         </button>
       </div>
       <nav class="sidebar-menu">
-        <a href="data_encryptor.html" class="menu-item">
-          <svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+        <a href="data_encryptor.html" class="menu-item" data-icon="encryptor">
+          <svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5">
             <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z" />
           </svg>
-          Data Encryptor
+          <span>Data Encryptor</span>
         </a>
-        <a href="data_decryptor.html" class="menu-item">
-          <svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+        <a href="data_decryptor.html" class="menu-item" data-icon="decryptor">
+          <svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5">
             <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5V6.75a4.5 4.5 0 1 1 9 0v3.75M3.75 21.75h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H3.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z" />
           </svg>
-          Data Decryptor
+          <span>Data Decryptor</span>
         </a>
       </nav>
-      <div class="sidebar-footer">Site Made By Laksh &lt;3</div>
     </aside>
 
     <main class="main">
       <div class="header">
         <div class="mobile-sidebar-toggle-container">
           <button class="mobile-sidebar-toggle">
-            <svg class="mobile-toggle-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+            <svg class="mobile-toggle-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5">
               <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
             </svg>
           </button>
         </div>
-        <h1 class="title">EncryptX Data Obfuscator</h1>
+        <h1 class="title">Data Obfuscator</h1>
+        <div class="info-container">
+          <button class="info-button">
+            <svg class="info-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"/>
+            </svg>
+          </button>
+          <div class="info-popup">
+            <div class="info-item">
+              <svg class="info-svg" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+              </svg>
+              <span class="time-display">Current Time: <span id="current-time">00:00:00</span></span>
+            </div>
+            <div class="info-item">
+              <svg class="info-svg" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99"/>
+              </svg>
+              <span>Version: 1.0.0</span>
+            </div>
+            <div class="info-item">
+              <svg class="info-svg" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 0 1-1.043 3.296 3.745 3.745 0 0 1-3.296 1.043A3.745 3.745 0 0 1 12 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 0 1-3.296-1.043 3.745 3.745 0 0 1-1.043-3.296A3.745 3.745 0 0 1 3 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 0 1 1.043-3.296 3.746 3.746 0 0 1 3.296-1.043A3.746 3.746 0 0 1 12 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 0 1 3.296 1.043 3.746 3.746 0 0 1 1.043 3.296A3.745 3.745 0 0 1 21 12Z"/>
+              </svg>
+              <span>Laksh Kukreja</span>
+            </div>
+          </div>
+        </div>
         <button class="theme-toggle">
-          <svg class="theme-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+          <svg class="theme-icon" viewBox="0 0 24 24" fill="none" stroke-width="1.5">
             <!-- Icon will be inserted by JavaScript -->
           </svg>
         </button>
